--- a/backend/templates/layouts/landing.html
+++ b/backend/templates/layouts/landing.html
@@ -1,10 +1,6 @@
-{# plantilla para páginas landing con bootstrap4 #}
-
-{% load cms_tags sekizai_tags static i18n menu_tags %}
-
-{% get_current_language as lang_code %}
-
 <!doctype html>
+{% load cms_tags sekizai_tags static i18n menu_tags %}
+{% get_current_language as lang_code %}
 <html lang="{{ lang_code }}">
     <head>
         <meta charset="utf-8">
@@ -18,7 +14,7 @@
         </title>
 
         <link rel="shortcut icon" href="{% static 'img/favicon.ico' %}" type="image/x-icon"/>
-        <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
+        <link rel="stylesheet" href="{% static '/vendors/bootstrap/4.0.0/css/bootstrap.min.css' %}">
         {% render_block "css" %}
     </head>
     <body>
@@ -44,9 +40,9 @@
 
         {% static_placeholder 'footer' %}
         
-        <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
-        <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
-        <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
+        <script src="{% static '/vendors/jquery/3.2.1/jquery.slim.min.js' %}"></script>
+        <script src="{% static '/vendors/popper/1.12.9/popper.min.js' %}"></script>
+        <script src="{% static '/vendors/bootstrap/4.0.0/js/bootstrap.min.js' %}"></script>
         {% render_block "js" %}
     </body>
 </html>
